# VideoPlayer

./: .gitignore  README.md  build.gradle  gradle.properties  import-summary.txt  keyStore.jks  settings.gradle
app/: CMakeLists.txt  build.gradle
app/faceResource/microphone/res/values/: res_microphone_recording.xml
app/faceResource/siri/res/values/: res_face_recording.xml  res_face_speaking.xml
app/faceResource/v1/res/values/: res_face_bm20500.xml  res_face_by20300.xml  res_face_default0.xml  res_face_fn20200.xml  res_face_hq10800.xml  res_face_hs20600.xml  res_face_jl21200.xml  res_face_js21000.xml  res_face_jt11200.xml  res_face_jy10100.xml  res_face_jz20800.xml  res_face_kj20900.xml  res_face_kw10900.xml  res_face_kx10300.xml  res_face_mz10500.xml  res_face_pl10600.xml  res_face_qd11000.xml  res_face_recording1.xml  res_face_sq20100.xml  res_face_sw21100.xml  res_face_wakeup.xml  res_face_wl21300.xml  res_face_xf10200.xml  res_face_yh21500.xml  res_face_yw20400.xml  res_face_zx10400.xml
app/libs/: authority-release-0703.aar  iqyvideo-release.aar  sdkhttp-0703.aar  semantic-release-0703.aar
app/src/androidTest/java/com/example/testdemo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/yoy/testdemo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/yoy/videoPlayer/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/yoy/videoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/library_test_aidl/: AidlAiListener.aidl
app/src/main/aidl/com/example/testdemo/: IAppAIDLTest.aidl
app/src/main/cpp/: Test.cpp  Test.h  default_code.h  list_define.h  logger.h  native-lib.cpp  video_filter.c
app/src/main/cpp/define/: linked_list_define.h
app/src/main/java/com/example/testdemo/: App.kt  GenerateValueFiles.java  MainActivity.kt
app/src/main/java/com/example/testdemo/base/: BaseDefaultActivity.kt
app/src/main/java/com/example/testdemo/utlis/: AppCode.kt  FileTools.kt  KLog.kt  SPUtils.kt  SystemUtils.kt  TimeUtils.kt  ToastUtils.java
app/src/main/java/res/drawable/: ic_play_audio_anim.xml
app/src/main/java/res/layout/: activity_audio_recorder.xml  activity_barrier_free.xml  activity_broadcast.xml  activity_notification.xml  activity_permission.xml  activity_popup_window.xml  activity_start_phone_app.xml  activity_test_view.xml  activity_viewpager.xml  layout_skill_template_dialog.xml
app/src/main/res/drawable/: ic_cancel_btn.xml  ic_cancel_btn_bg_n.xml  ic_cancel_btn_bg_pre.xml  ic_go_advertising_btn.xml  ic_go_advertising_btn_bg_n.xml  ic_go_advertising_btn_bg_pre.xml  ic_play_audio.xml  ic_progress_bg.xml  ic_video_bg.xml  ic_video_seekbar_bg.xml  ic_video_setting.xml  rotate_anim.xml  shape_ai_face_bg.xml  test.xml
app/src/main/res/layout/: activity_aidl.xml  activity_audio_recorder.xml  activity_barrier_free.xml  activity_broadcast.xml  activity_dagger.xml  activity_ffmpeg.xml  activity_jni.xml  activity_main.xml  activity_network.xml  activity_notification.xml  activity_on_click.xml  activity_permission.xml  activity_popup_window.xml  activity_scan_ip.xml  activity_start_phone_app.xml  activity_test_view.xml  activity_video_play.xml  activity_viewpager.xml  layout_adapter.xml  layout_advertising_view.xml  layout_ffmpeg_bottom.xml  layout_ffmpeg_top.xml  layout_get_musiccard_qrcode.xml  layout_preview_video.xml  layout_skill_template_dialog.xml  layout_video_bottom.xml  layout_video_top.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility.xml
app/src/test/java/com/example/testdemo/: ExampleUnitTest.kt  GenerateValueFiles.java
videoplayer/: CMakeLists.txt  build.gradle
videoplayer/src/androidTest/java/com/yoy/videoPlayer/: ExampleInstrumentedTest.kt
videoplayer/src/androidTest/java/com/yoy/videoplayer/: ExampleInstrumentedTest.kt
videoplayer/src/main/: AndroidManifest.xml
videoplayer/src/main/cpp/: ErrorCodeDefine.h  NativePlayer.cpp  NativePlayer.h  audio_lame.c  default_code.h  ffmpeg_jni_define.h  list_defiine.h  logger.h  native-lib.cpp  native_lib_define.h  video_filter.c
videoplayer/src/main/cpp/ffmpeg/: ffmpeg_opt.c
videoplayer/src/main/cpp/include/libavcodec/: mathops.h
videoplayer/src/main/cpp/include/libavutil/: timer.h
videoplayer/src/main/cpp/my/: NativePlayer.cpp  NativePlayer.h  default_code.h  logger.h  native-lib.cpp  native_lib_define.h
videoplayer/src/main/java/com/yoy/videoPlayer/: VideoApplication.kt
videoplayer/src/main/java/com/yoy/videoPlayer/beans/: VideoFileInfo.kt
videoplayer/src/main/java/com/yoy/videoPlayer/processing/: DecodeOptionTextView.kt  DecodeType.kt  FileAttributes.kt  PlayStateListener.kt  PlayVideoHandler.kt  VideoPreviewBar.kt
videoplayer/src/main/java/com/yoy/videoPlayer/ui/: FragmentCallback.kt  MainActivity.kt  MainVideoActivity.kt  VideoPlayActivity.kt  VideoPlayPresenter.kt  VideoPlayUiControl.kt  VideoProcessActivity.kt  VideoProcessPresenter.kt  VideoProcessUiControl.kt
videoplayer/src/main/java/com/yoy/videoPlayer/utils/: DatabaseHandler.kt  (+2 more)
videoplayer/src/main/java/com/yoy/videoplayer/: DecodeOptionTextView.kt  DecodeType.kt  FileAttributes.kt  MainActivity.kt  PlayStateListener.kt  PlayVideoHandler.kt  VideoApplication.kt  VideoPlayActivity.kt  VideoPlayPresenter.kt  VideoPlayUiControl.kt  VideoPreviewBar.kt
videoplayer/src/main/res/drawable/: ic_back1_bg.xml  ic_back1_n.xml  ic_back1_p.xml  ic_line_bg.xml  ic_next.xml  ic_pre.xml  ic_stop_play.xml  ic_video_seekbar_bg.xml  ic_video_seekbar_pre_bg.xml
videoplayer/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_video_play.xml  activity_video_process.xml  fragment_video_control.xml  layout_filter.xml  layout_play_history_popup_window.xml  layout_popup_window_item.xml  layout_preview_video.xml  layout_video_bottom.xml  layout_video_top.xml
videoplayer/src/main/res/values/: colors.xml  strings.xml  themes.xml
videoplayer/src/test/java/com/yoy/videoPlayer/: ExampleUnitTest.kt  JavaClass.java
videoplayer/src/test/java/com/yoy/videoplayer/: ExampleUnitTest.kt
(+211 files in other folders)
